Added Find by ID

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-### Common
+
 ---
 server:
   port: 8000
@@ -9,20 +9,15 @@ server:
 spring:
   application:
     name: IBCS-Code-Challenge
-#  profiles:
-#    active: pgsql
   jpa:
-    generate-ddl: false
     hibernate:
       ddl-auto: update
 
-logging:
-  level:
-    root: INFO
 ---
 
 ---
 
+#Database Credentials
 spring:
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/ibcs-code-challenge}
